--- a/project/composer.json
+++ b/project/composer.json
@@ -9,7 +9,8 @@
         "dusterio/lumen-passport": "^0.2.19",
         "laravel/helpers": "^1.2",
         "laravel/lumen-framework": "^7.0",
-        "laravel/passport": "^9.3"
+        "laravel/passport": "^9.3",
+        "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9.1",
